--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,12 @@
 {
-  "dependencies": {
-    "express": "^4.21.1",
-    "nodemon": "^3.1.7"
-  }
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
