--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "mongoose": "^8.8.3",
     "nodemon": "^3.1.7"
   },
-  "devDependencies": {},
   "description": ""
 }
