--- a/Frountend/package.json
+++ b/Frountend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
