--- a/Frountend/package.json
+++ b/Frountend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
+    "country-state-city": "^3.2.1",
     "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
+    "react-select": "^5.9.0",
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.15"
   },
